--- a/project_prototype/SecureWitness/templates/SecureWitness/register.html
+++ b/project_prototype/SecureWitness/templates/SecureWitness/register.html
@@ -28,7 +28,7 @@
 	<!-- as_p method wraps each element in a paragraph element.
 	     Each element appears on a new line. -->
 	{{ user_form.as_p }}
-	{{ profile_form.as_p }}
+	<!--{{ profile_form.as_p }} -->
 
 	<input type="submit" name="submit" value="Register" />
       </form>
