--- a/project_prototype/SecureWitness/templates/SecureWitness/index.html
+++ b/project_prototype/SecureWitness/templates/SecureWitness/index.html
@@ -9,18 +9,7 @@
   <body>
     {% block body_block %}
     <div class="hero-unit">
-      {% if user.is_authenticated %}
-      {% if files %}
-      <ul>
-	{% for file in files %}
-	<li><a href="{{ file.file.url }}">{{ file.title }}</a></li>
-	{% endfor %}
-      </ul>
-      {% else %}
-      <p>No files.</p>
-      {% endif %}
-      {% else %}
-      {% endif %}
+      This is the home page.
 
     </div>
     {% endblock %}
