Upload File Form working, determine author/uploader

--- a/project_prototype/SecureWitness/templates/SecureWitness/upload.html
+++ b/project_prototype/SecureWitness/templates/SecureWitness/upload.html
@@ -7,7 +7,7 @@ Date of Incident (optional): {{form.dateOfIncident}} </br>
 Incident Location (optional): {{form.locationOfIncident}} </br>
 Keywords (optional): {{form.keywords}} </br>
 <!--Report Author: {{form.author}} </br>-->
-Would you like to make this report private? {{form.private}}</br>
+Would you like to make this report private? {{form.user_perm}}</br>
 {{form.file}} </br>
 <input type = "submit" value = "Upload"/>
 
