changed portal.html to userportal.html and all relevant files

--- a/project_prototype/SecureWitness/templates/SecureWitness/base.html
+++ b/project_prototype/SecureWitness/templates/SecureWitness/base.html
@@ -47,7 +47,7 @@
 	    <ul class="nav nav-list">
 	      <li class="nav-header">List header</li>
 	      {% if user.is_authenticated %}
-	      <li><a href="/SecureWitness/portal/">Portal</a></li>
+	      <li><a href="/SecureWitness/userportal/">User Portal</a></li>
 	      <li><a href="/SecureWitness/upload/">Upload</a></li>
 	      <li><a href="/SecureWitness/settings/">Settings</a></li>
               {% endif %}
