Index shows only my reports- not groups or public files

--- a/project_prototype/SecureWitness/templates/SecureWitness/upload.html
+++ b/project_prototype/SecureWitness/templates/SecureWitness/upload.html
@@ -8,7 +8,12 @@ Incident Location (optional): {{form.locationOfIncident}} </br>
 Keywords (optional): {{form.keywords}} </br>
 <!--Report Author: {{form.author}} </br>-->
 Would you like to make this report private? {{form.user_perm}}</br>
-{{form.file}} </br>
+Upload file(s): </br>
+{{form.file1}} </br>
+{{form.file2}} </br>
+{{form.file3}} </br>
+{{form.file4}} </br>
+{{form.file5}} </br>
 <input type = "submit" value = "Upload"/>
 
 </form>
