--- a/project_prototype/SecureWitness/templates/SecureWitness/reportDetails.html
+++ b/project_prototype/SecureWitness/templates/SecureWitness/reportDetails.html
@@ -15,6 +15,7 @@
 		<div class="hero-unit">
 			<h2>{{rep.title}}</h2>
 		</div>
+			Author: {{rep.authorName}} </br>
         	Upload Date: {{rep.timestamp}} </br>
 			Subject: {{rep.shortDesc}} </br>
 			Description: {{rep.detailsDesc}} </br>
