--- a/project_prototype/SecureWitness/templates/SecureWitness/reportDetails.html
+++ b/project_prototype/SecureWitness/templates/SecureWitness/reportDetails.html
@@ -19,9 +19,6 @@
         	Upload Date: {{rep.timestamp}} </br>
 			Subject: {{rep.shortDesc}} </br>
 			Description: {{rep.detailsDesc}} </br>
-			{% if rep.files %}
-				Files: <a href="{{rep.files}}"> {{rep.files}}</a></br>
-			{% endif %}
 			{% if rep.dateOfIncident %}
 			    Incident Date: {{rep.dateOfIncident}}</br>
 			{% endif %}
@@ -33,9 +30,16 @@
 			{% endif %}
 			
         {% endfor %}
-    	</ul>
+    	
+        {% if files %}
+				Files: 
+				{% for file in files %}
+				    <a href="{{file.file}}"> {{file.file}}</a></br>
+				{% endfor %}
+		{% endif %}
+		</ul>
     {% else %}
-      <p>No files.</p>
+      <p>No report.</p>
       
 	{% endif %}
     {% endblock %}
