--- a/project_prototype/SecureWitness/templates/SecureWitness/upload.html
+++ b/project_prototype/SecureWitness/templates/SecureWitness/upload.html
@@ -8,12 +8,8 @@ Incident Location (optional): {{form.locationOfIncident}} </br>
 Keywords (optional): {{form.keywords}} </br>
 <!--Report Author: {{form.author}} </br>-->
 Would you like to make this report private? {{form.user_perm}}</br>
-Upload file(s): </br>
-{{form.file1}} </br>
-{{form.file2}} </br>
-{{form.file3}} </br>
-{{form.file4}} </br>
-{{form.file5}} </br>
-<input type = "submit" value = "Upload"/>
+
+<input type = "submit" value = "Upload File(s)" name = "upload"/>
+<input type = "submit" value = "Submit Report" name = "submit"/>
 
 </form>
