--- a/project_prototype/SecureWitness/templates/SecureWitness/index.html
+++ b/project_prototype/SecureWitness/templates/SecureWitness/index.html
@@ -20,7 +20,7 @@
       {% if reports %}
       <ul>
 	{% for report in reports %}
-	<li><a href="/SecureWitness/report/{{report.title}}">{{ report.title }}</a></li>
+	<li><a href="/SecureWitness/report/{{report.title.split|join:'_'}}">{{ report.title }}</a></li>
 	{% endfor %}
       </ul>
       {% else %}
