--- a/project_prototype/SecureWitness/templates/SecureWitness/index.html
+++ b/project_prototype/SecureWitness/templates/SecureWitness/index.html
@@ -36,23 +36,23 @@
       {% else %}
       <p>No groups.</p>
       {% endif %}
+	  
+	  {% if admin_status %}
       <h2>Promote To Admin</h2>
       
-      {% if admin_user_form.queryset.count %}
-      <form id="admin_user_form" method="post" action="/SecureWitness/" enctype="multipart/form-data">
-	{% csrf_token %}
-	{{ admin_user_form.as_p }}
+	  
+		<form id="admin_user_form" method="post" action="/SecureWitness/" enctype="multipart/form-data">
+		{% csrf_token %}
+		{{ admin_user_form.as_p }}
 
-	<input type="submit" name="submit" value="Promote" />
-      </form>
-      Not empty.
-      {% else %}
-      There are no non-admin users to promote.
+		<input type="submit" name="submit" value="Promote" />
+		</form>
+		
       {% endif %}
-      
       {% else %}
       This is the home page.
       {% endif %}
+	  
     </div>
     {% endblock %}
   </body>
