--- a/project_prototype/SecureWitness/templates/SecureWitness/userportal.html
+++ b/project_prototype/SecureWitness/templates/SecureWitness/userportal.html
@@ -3,13 +3,30 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>SecureWitness</title>
+    <title>{{ curr_user }}'s Portal</title>
   </head>
 
   <body>
     {% block body_block %}
-    <div class="hero-unit">
-      This is the user portal.
+        <div class="hero-unit">
+            This is the user portal of <u>{{ curr_user }}</u>.
+        {% if granted %}
+
+      <strong><p>You have granted {{ curr_user }}'s request to join {{ group }}. {{ curr_user }} can now see all files and folders in {{ group }}.</p></strong>
+      <a href="/SecureWitness/group/{{ group }}">Return to the group page.</a>
+      {% else %}
+
+      <form id="grant_form" method="post" action="/SecureWitness/userportal/{{ curr_user }}/"
+	    enctype="multipart/form-data">
+    	{% csrf_token %}
+
+	<!-- as_p method wraps each element in a paragraph element.
+	     Each element appears on a new line. -->
+	    {{ grant_form.as_p }}
+
+	<input type="submit" name="submit" value="Grant Request" />
+      </form>
+        {% endif %}
     </div>
     {% endblock %}
   </body>
