My Groups only show my groups, Request Groups shows list of groups I'm not in

--- a/project_prototype/SecureWitness/templates/SecureWitness/base.html
+++ b/project_prototype/SecureWitness/templates/SecureWitness/base.html
@@ -45,7 +45,7 @@
           <div class="well sidebar-nav">
             <!--- Empty for the timebeing -->
 	    <ul class="nav nav-list">
-	      <li class="nav-header">List header</li>
+	      <li class="nav-header">List Header</li>
 	      {% if user.is_authenticated %}
 	      <li><a href="/SecureWitness/userportal/">User Portal</a></li>
 	      <li><a href="/SecureWitness/upload/">Upload</a></li>
