--- a/project_prototype/SecureWitness/templates/SecureWitness/index.html
+++ b/project_prototype/SecureWitness/templates/SecureWitness/index.html
@@ -16,6 +16,7 @@
           <button class="btn btn-default" type="button">Go!</button>
 	</span>
       </div><!-- /input-group -->
+      
       <h2>My Reports</h2>
       {% if reports %}
       <ul>
@@ -24,8 +25,9 @@
 	{% endfor %}
       </ul>
       {% else %}
-      <p>No files.</p>
+      <p>No reports.</p>
       {% endif %}
+      
       <h2>My Groups</h2>
       {% if groups %}
       <ul>
@@ -36,8 +38,48 @@
       {% else %}
       <p>No groups.</p>
       {% endif %}
-	  
-	  {% if admin_status %}
+      
+      <h2>Request Groups</h2>
+      {% if request_groups %}
+      <ul>
+	{% for group in request_groups %}
+	<li><a href="/SecureWitness/group/{{ group.name }}">{{ group.name }}</a></li>
+	{% endfor %}
+      </ul>
+      {% else %}
+      <p>No groups to send requests to join.</p>
+      {% endif %}
+      
+      
+      {% if admin_status %}
+      <h2>All Reports</h2>
+      {% if all_reports %}
+      <ul>
+	{% for report in all_reports %}
+	<li><a href="/SecureWitness/report/{{report.title.split|join:'_'}}">{{ report.title }}</a></li>
+	{% endfor %}
+      </ul>
+      {% else %}
+      <p>No reports.</p>
+      {% endif %}
+      {% endif %}
+      
+      
+      {% if admin_status %}
+      <h2>All Groups</h2>
+      {% if all_groups %}
+      <ul>
+	{% for group in all_groups %}
+	<li><a href="/SecureWitness/group/{{ group.name }}">{{ group.name }}</a></li>
+	{% endfor %}
+      </ul>
+      {% else %}
+      <p>No Groups.</p>
+      {% endif %}
+      {% endif %}
+      
+      
+      {% if admin_status %}
       <h2>Promote To Admin</h2>
       
 	  
