Groups, my reports, public reports shown... need groups

--- a/project_prototype/SecureWitness/templates/SecureWitness/index.html
+++ b/project_prototype/SecureWitness/templates/SecureWitness/index.html
@@ -30,7 +30,8 @@
       {% if groups %}
       <ul>
 	{% for group in groups %}
-	<li><a href="/SecureWitness/group/{{ group.name }}">{{ group.name }}</a></li>
+	
+	<li><a href="/SecureWitness/group/{{ group }}">{{ group }}</a></li>
 	{% endfor %}
       </ul>
       {% else %}
