Edit Report, Rename Report, Delete Report completed, Title no longer primary key of report

--- a/project_prototype/SecureWitness/templates/SecureWitness/index.html
+++ b/project_prototype/SecureWitness/templates/SecureWitness/index.html
@@ -21,7 +21,7 @@
       {% if reports %}
       <ul>
 	{% for report in reports %}
-	<li><a href="/SecureWitness/report/{{report.title.split|join:'_'}}">{{ report.title }}</a></li>
+	<li><a href="/SecureWitness/report/{{report.id}}">{{ report.title }}</a></li>
 	{% endfor %}
       </ul>
       {% else %}
@@ -59,7 +59,7 @@
       {% if all_reports %}
       <ul>
 	{% for report in all_reports %}
-	<li><a href="/SecureWitness/report/{{report.title.split|join:'_'}}">{{ report.title }}</a></li>
+	<li><a href="/SecureWitness/report/{{report.id}}">{{ report.title }}</a></li>
 	{% endfor %}
       </ul>
       {% else %}
