--- a/project_prototype/SecureWitness/templates/SecureWitness/FileUpload.html
+++ b/project_prototype/SecureWitness/templates/SecureWitness/FileUpload.html
@@ -1,5 +1,5 @@
 
-<form action="{% url 'SecureWitness:FileUpload' reportTitle.split|join:'_' %}" method="post" enctype="multipart/form-data">
+<form action="{% url 'SecureWitness:FileUpload' reportID %}" method="post" enctype="multipart/form-data">
 {% csrf_token %}
 
 {{form.file}}</br></br>
