--- a/project_prototype/SecureWitness/templates/SecureWitness/index.html
+++ b/project_prototype/SecureWitness/templates/SecureWitness/index.html
@@ -10,12 +10,11 @@
     {% block body_block %}
     <div class="hero-unit">
       {% if user.is_authenticated %}
-      <div class="input-group">
-	<input type="text" class="form-control" placeholder="Search for...">
-	<span class="input-group-btn">
-          <button class="btn btn-default" type="button">Go!</button>
-	</span>
-      </div><!-- /input-group -->
+      <form id="search_form" method="post" action="/SecureWitness/results/" enctype="multipart/form-data">
+	{% csrf_token %}
+	{{ search_form.as_table }}
+	<input type="submit" class="btn" name="submitSearch" value="Go" />
+      </form>
       
       <h2>My Reports</h2>
       {% if reports %}
@@ -53,48 +52,6 @@
       <p>No groups to send requests to join.</p>
       {% endif %}
       
-      
-      {% if admin_status %}
-      <h2>All Reports</h2>
-      {% if all_reports %}
-      <ul>
-	{% for report in all_reports %}
-	<li><a href="/SecureWitness/report/{{report.title.split|join:'_'}}">{{ report.title }}</a></li>
-	{% endfor %}
-      </ul>
-      {% else %}
-      <p>No reports.</p>
-      {% endif %}
-      {% endif %}
-      
-      
-      {% if admin_status %}
-      <h2>All Groups</h2>
-      {% if all_groups %}
-      <ul>
-	{% for group in all_groups %}
-	<li><a href="/SecureWitness/group/{{ group.name }}">{{ group.name }}</a></li>
-	{% endfor %}
-      </ul>
-      {% else %}
-      <p>No Groups.</p>
-      {% endif %}
-      {% endif %}
-      
-      
-      {% if admin_status %}
-
-      <h2>Promote To Admin</h2>
-      
-	  
-		<form id="admin_user_form" method="post" action="/SecureWitness/" enctype="multipart/form-data">
-		{% csrf_token %}
-		{{ admin_user_form.as_p }}
-
-		<input type="submit" name="submit" value="Promote" />
-		</form>
-		
-      {% endif %}
       {% else %}
       This is the home page.
       {% endif %}
