--- a/project_prototype/SecureWitness/templates/SecureWitness/base.html
+++ b/project_prototype/SecureWitness/templates/SecureWitness/base.html
@@ -50,7 +50,7 @@
               {% if admin_status %}
               <li><a href="/SecureWitness/adminportal/">Admin Portal</a></li>
               {% endif %}
-	      <li><a href="/SecureWitness/userportal/">User Portal</a></li>
+	      <li><a href="/SecureWitness/userportal/{{ user }}">User Portal</a></li>
 	      <li><a href="/SecureWitness/upload/">Upload</a></li>
 	      <li><a href="/SecureWitness/settings/">Settings</a></li>
               {% endif %}
