--- a/project_prototype/SecureWitness/templates/SecureWitness/group.html
+++ b/project_prototype/SecureWitness/templates/SecureWitness/group.html
@@ -11,8 +11,27 @@
     {% block body_block %}
     <div class="hero-unit">
       Group page for {{ group.name }}.
+      
     </div>
     <div class="container-fluid">
+        {% if admin_status %}
+        <div class=pull-right>
+        <h3>Add Member to Group</h3>
+	<form id="add_member_form" method="post" action="/SecureWitness/group/{{ group.name }}/" enctype="multipart/form-data">
+            {% csrf_token %}
+	    {{ add_member_form.as_p }}
+	    <input type="submit" name="submitAdd" value="Add" />
+	</form>
+       
+    
+        <h3>Remove Member from Group</h3>
+	<form id="remove_member_form" method="post" action="/SecureWitness/group/{{ group.name }}/" enctype="multipart/form-data">
+	    {% csrf_token %}
+	    {{ remove_member_form.as_p }}
+	    <input type="submit" name="submitRemove" value="Remove" />
+	</form>
+        </div>
+        {% endif %}
         {% if group %}
           <p>Members:</p>
           <ul>
