--- a/project_prototype/SecureWitness/templates/SecureWitness/results.html
+++ b/project_prototype/SecureWitness/templates/SecureWitness/results.html
@@ -11,7 +11,26 @@
     <div class="hero-unit">
       <h1>Results</h1>
       This is the results page.
-
+      
+      <form id="search_form" method="post" action="/SecureWitness/results/" enctype="multipart/form-data">
+	{% csrf_token %}
+	{{ search_form.as_table }}
+	<input type="submit" class="btn" name="submitSearch" value="Go" />
+      </form>
+      
+      {% if as_post %}
+      You searched for: {{ query }}
+      
+      {% if results %}
+      {% for report in results %}
+      <ul>
+        <li><a href="/SecureWitness/report/{{report.id}}">{{ report.title }}</a></li>
+        {% endfor %}
+      </ul>
+      {% else %}
+        <p>No results found.</p>
+      {% endif %}
+      {% endif %}
     </div>
     {% endblock %}
   </body>
