--- a/project_prototype/SecureWitness/templates/SecureWitness/base.html
+++ b/project_prototype/SecureWitness/templates/SecureWitness/base.html
@@ -7,6 +7,7 @@
     <link href="{% static 'css/bootstrap-fluid-adj.css' %}" rel="stylesheet">
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" media="screen">
     <link href="{% static 'css/bootstrap-responsive.css' %}" rel="stylesheet">
+	<link href="{% static 'css/SecureWitnessStyle.css' %}" rel="stylesheet">
 
     <title>SecureWitness - {% block title %}Something Something Something!{% endblock %}</title>
   </head>
