--- a/project_prototype/SecureWitness/templates/SecureWitness/index.html
+++ b/project_prototype/SecureWitness/templates/SecureWitness/index.html
@@ -4,6 +4,7 @@
 <html>
   <head>
     <title>SecureWitness</title>
+	
   </head>
 
   <body>
@@ -24,19 +25,23 @@
 	    <input type="submit" class="btn" name="submitSearch" value="Go" />
          </form>
 
-      <h2>My Folders</h2>
-      {% if my_folders %}
+    
+
+	<section>
+      <h2>My Reports</h2>
+		
+      {% if myreports %}
       <ul>
-	{% for folder in my_folders %}
-	<li><a href="/SecureWitness/folder/{{folder.name}}">{{ folder.name }}</a></li>
-	{% endfor %}
+		{% for report in myreports %}
+		<li><a href="/SecureWitness/report/{{report.id}}">{{ report.title }}</a></li>
+		{% endfor %}
       </ul>
       {% else %}
-      <p>No folders.</p>
+		<p>No reports.</p>
       {% endif %}
-
-
-      <h2>My Reports</h2>
+	 </section><?--
+	 --><section>
+	  <h2>Other Reports</h2>
       {% if reports %}
       <ul>
 	{% for report in reports %}
@@ -46,7 +51,8 @@
       {% else %}
       <p>No reports.</p>
       {% endif %}
-      
+     </section><?--
+	 --><section>
       <h2>My Groups</h2>
       {% if groups %}
       <ul>
@@ -59,17 +65,8 @@
       <p>No groups.</p>
       {% endif %}
          <!-- </form>-->
-
-        <h2>Create New Folder</h2>
-		 <form id="make_folder_form" method="post" action="/SecureWitness/" enctype="multipart/form-data">
-    	{% csrf_token %}
-
-	    {{ make_folder_form.as_p }}
-
-	    <input type="submit" name="submit_make_folder" value="Make Folder" />
-         </form>
-
-      <h2>Request Groups</h2>
+	</section><section>
+	 <h2>Request Groups</h2>
       {% if request_groups %}
 	  <ul>
 	{% for group in request_groups %}
@@ -79,9 +76,32 @@
       {% else %}
       <p>No groups to send requests to join.</p>
       {% endif %}
+	 </section><section>
+	   <h2>My Folders</h2>
+      {% if my_folders %}
+      <ul>
+	{% for folder in my_folders %}
+	<li><a href="/SecureWitness/folder/{{folder.name}}">{{ folder.name }}</a></li>
+	{% endfor %}
+      </ul>
+      {% else %}
+      <p>No folders.</p>
+      {% endif %}
+	</section><section>
+        <h2>Create New Folder</h2>
+		 <form id="make_folder_form" method="post" action="/SecureWitness/" enctype="multipart/form-data">
+    	{% csrf_token %}
+
+	    {{ make_folder_form.as_p }}
+
+	    <input type="submit" name="submit_make_folder" value="Make Folder" />
+         </form>
+	</section>
+     
 
       
       {% if admin_status %}
+	  <section>
       <h2>All Reports</h2>
           {% if all_reports %}
           <ul>
@@ -95,7 +115,7 @@
 
       {% endif %}
       
-      
+      </section><section>
       {% if admin_status %}
       <h2>All Groups</h2>
           {% if all_groups %}
@@ -108,6 +128,7 @@
           <p>No Groups.</p>
           {% endif %}
       {% endif %}
+	  </section>
       
       
       {% if admin_status %}
@@ -131,4 +152,3 @@
     {% endblock %}
   </body>
 </html>
-
