--- a/project_prototype/SecureWitness/templates/SecureWitness/index.html
+++ b/project_prototype/SecureWitness/templates/SecureWitness/index.html
@@ -11,14 +11,9 @@
     {% block body_block %}
     <div class="hero-unit">
       {% if user.is_authenticated %}
-      <a href="/SecureWitness/userportal/{{ current_user }}/">Link to User Portal</a>
-
-      <div class="input-group">
-	<input type="text" class="form-control" placeholder="Search for...">
-	<span class="input-group-btn">
-          <button class="btn btn-default" type="button">Go!</button>
-	</span>
-      </div><!-- /input-group -->
+      <h2>Search</h2>
+	  <h4> Search by field for reports you have access to </h4>
+     <!-- /input-group -->
           <form id="search_form" method="post" action="/SecureWitness/results/" enctype="multipart/form-data">
 	    {% csrf_token %}
     	{{ search_form.as_table }}
@@ -98,51 +93,6 @@
          </form>
 	</section>
      
-
-      
-      {% if admin_status %}
-	  <section>
-      <h2>All Reports</h2>
-          {% if all_reports %}
-          <ul>
-        {% for report in all_reports %}
-        <li><a href="/SecureWitness/report/{{report.id}}">{{ report.title }}</a></li>
-        {% endfor %}
-          </ul>
-          {% else %}
-          <p>No reports.</p>
-          {% endif %}
-
-      {% endif %}
-      
-      </section><section>
-      {% if admin_status %}
-      <h2>All Groups</h2>
-          {% if all_groups %}
-          <ul>
-        {% for group in all_groups %}
-        <li><a href="/SecureWitness/group/{{ group.name }}">{{ group.name }}</a></li>
-        {% endfor %}
-          </ul>
-          {% else %}
-          <p>No Groups.</p>
-          {% endif %}
-      {% endif %}
-	  </section>
-      
-      
-      {% if admin_status %}
-
-      <h2>Promote To Admin</h2>
-
-		<form id="admin_user_form" method="post" action="/SecureWitness/" enctype="multipart/form-data">
-		{% csrf_token %}
-		{{ admin_user_form.as_p }}
-
-		<input type="submit" name="submit_admin" value="Promote" />
-        </form>
-
-      {% endif %}
 
       {% else %}
       This is the home page.
