--- a/project_prototype/SecureWitness/templates/SecureWitness/reportDetails.html
+++ b/project_prototype/SecureWitness/templates/SecureWitness/reportDetails.html
@@ -43,7 +43,7 @@
         {% if files %}
 				Files: 
 				{% for file in files %}
-				    <a href="{{file.file}}"> {{file.file}}</a></br>
+				    <a href="/SecureWitness/download/{{file.id}}"> {{file.file}}</a></br>
 				{% endfor %}
 		{% endif %}
 		</ul>
