--- a/SecureWitness/templates/SecureWitness/group.html
+++ b/SecureWitness/templates/SecureWitness/group.html
@@ -10,29 +10,8 @@
   <!--<form action="{% url 'SecureWitness:group' %}" method="post">-->
     {% block body_block %}
     <div class="hero-unit">
-      Group page for {{ group.name }}.
-      
-    </div>
-    <div class="container-fluid">
-        {% if admin_status %}
-        <div class=pull-right>
-        <h3>Add Member to Group</h3>
-	<form id="add_member_form" method="post" action="/SecureWitness/group/{{ group.name }}/" enctype="multipart/form-data">
-            {% csrf_token %}
-	    {{ add_member_form.as_p }}
-	    <input type="submit" name="submitAdd" value="Add" />
-	</form>
-       
-    
-        <h3>Remove Member from Group</h3>
-	<form id="remove_member_form" method="post" action="/SecureWitness/group/{{ group.name }}/" enctype="multipart/form-data">
-	    {% csrf_token %}
-	    {{ remove_member_form.as_p }}
-	    <input type="submit" name="submitRemove" value="Remove" />
-	</form>
-        </div>
-        {% endif %}
-        {% if group %}
+      <center> <h1>{{ group.name }} </h1> </center>
+	  {% if group %}
           <p>Members:</p>
           <ul>
 	        {% for member in members %} <!-- gets all members in the group -->
@@ -68,6 +47,45 @@
         {% else %}
         <p>No members in this group.</p>
          {% endif %}
+      
+    </div>
+    <div class="container-fluid">
+        {% if admin_status %}
+        <div class=pull-right>
+        <h3>Add Member to Group</h3>
+	<form id="add_member_form" method="post" action="/SecureWitness/group/{{ group.name }}/" enctype="multipart/form-data">
+            {% csrf_token %}
+	    {{ add_member_form.as_p }}
+	    <input type="submit" name="submitAdd" value="Add" />
+	</form>
+       
+    
+        <h3>Remove Member from Group</h3>
+	<form id="remove_member_form" method="post" action="/SecureWitness/group/{{ group.name }}/" enctype="multipart/form-data">
+	    {% csrf_token %}
+	    {{ remove_member_form.as_p }}
+	    <input type="submit" name="submitRemove" value="Remove" />
+	</form>
+        </div>
+        {% endif %}
+	{% if comments %}
+		{% for comment in comments %}
+			<h5> From {{comment.authorName}}: </h5>
+			{{comment.comment}}
+			</br>
+			</br>
+		{% endfor %}
+	{% else %}
+		No comments.
+	{% endif %}
+	<form id = "comment_form" method = "post" action = "/SecureWitness/groupComment/{{ group.name }}/" enctype="multipart/form-data">
+		{% csrf_token %}
+		{{comment_form.comment}} </br>
+		{% if comment_form %}
+			<input type="submit" name = "submitComment" value = "Send Comment">
+		{% endif %}
+	</form>
+        
 
     </div>
     {% endblock %}
