--- a/SecureWitness/templates/SecureWitness/group.html
+++ b/SecureWitness/templates/SecureWitness/group.html
@@ -10,10 +10,10 @@
   <!--<form action="{% url 'SecureWitness:group' %}" method="post">-->
     {% block body_block %}
     <div class="hero-unit">
-      Group page for {{ group.name }}.
+      <h2>Group page for {{ group.name }}.</h2>
       
-    </div>
-    <div class="container-fluid">
+    <!--</div>-->
+    <!--<div class="container-fluid">-->
         {% if admin_status %}
         <div class=pull-right>
         <h3>Add Member to Group</h3>
@@ -41,22 +41,15 @@
            </ul>
 
             {% if loggedin == 1 %}
+                <p>Reports:</p>
+                {% for report in reports %}
+                <li><a href="/SecureWitness/report/{{ report.id }}">{{ report.title }}</a> ({{ report.authorName }})</li>
+                {% endfor %}
+
                 <p>Requests:</p>
-             <!--{%  for request in requests %}
-             <li><a href="/SecureWitness/{{request }}">{{ request }}</a></li>
-                 <li> <input type = "submit" name = "requestChoice" value = {{ request }}> </li>
-        	    {% endfor %}-->
                 {% for request in requests %}
                 <li><a href="/SecureWitness/userportal/{{ request.requester }}">{{ request.requester }}</a></li>
                 {% endfor %}
-                <!--<form action="{% url 'SecureWitness:group' group.name %}" method="post">
-                {% csrf_token %}
-                {% for request in requests %}
-                    <input type="radio" name="request" id="request{{ forloop.counter }}" value="{{ request}}" />
-                    <label for="request{{ forloop.counter }}">{{ request }}</label><br />
-                {% endfor %}
-                <input type="submit" value="Approve Request" />
-                </form>-->
 
             {% else %}
                 {% if request_already_made %}
