--- a/SecureWitness/templates/SecureWitness/index.html
+++ b/SecureWitness/templates/SecureWitness/index.html
@@ -91,6 +91,15 @@
 
 	    <input type="submit" name="submit_make_folder" value="Make Folder" />
          </form>
+	</section><section>
+        <h2>Add Report to Group</h2>
+		 <form id="add_report_to_group_form" method="post" action="/SecureWitness/" enctype="multipart/form-data">
+    	{% csrf_token %}
+
+	    {{ add_report_to_group_form.as_p }}
+
+	    <input type="submit" name="submit_add_report_to_group" value="Add Report" />
+         </form>
 	</section>
      
 
