--- a/SecureWitness/templates/SecureWitness/base.html
+++ b/SecureWitness/templates/SecureWitness/base.html
@@ -56,6 +56,8 @@
 	      <li><a href="/SecureWitness/settings/">Settings</a></li>
               {% endif %}
 	    </ul>
+            {% block side_block %}
+            {% endblock %}
           </div>
           <!--/.well -->
         </div>
