--- a/SecureWitness/templates/SecureWitness/group.html
+++ b/SecureWitness/templates/SecureWitness/group.html
@@ -7,6 +7,8 @@
   </head>
 
   <body>
+    {% block side_block %}
+    {% endblock %}
   <!--<form action="{% url 'SecureWitness:group' %}" method="post">-->
     {% block body_block %}
     <div class="hero-unit">
@@ -33,10 +35,16 @@
                 <li><a href="/SecureWitness/userportal/{{ request.requester }}">{{ request.requester }}</a></li>
                 {% endfor %}
                 
+                <form id="email_link_form" method="post" action="/SecureWitness/group/{{ group.name }}/email/" enctype="multipart/form-data">
+                    {% csrf_token %}
+                    {{ email_link_form.as_p }}
+                    <input type="submit" name="submitEmailLink" value="Email Members in {{ group.name }}" />
+                </form>
+                
                 <form id="leave_group_form" method="post" action="/SecureWitness/group/{{ group.name }}/" enctype="multipart/form-data">
                     {% csrf_token %}
                     {{ leave_group_form.as_p }}
-                    <input type="submit" name="submitLeave" value="Leave Group" />
+                    <input type="submit" name="submitLeave" value="Leave {{ group.name }}" />
                 </form>
 
             {% else %}
@@ -55,7 +63,7 @@
     <!--<div class="container-fluid">-->
         {% if admin_status %}
         <div class=pull-right>
-        <h3>Add Member to Group</h3>
+        <h3>Add Member to {{ group.name }}</h3>
 	<form id="add_member_form" method="post" action="/SecureWitness/group/{{ group.name }}/" enctype="multipart/form-data">
             {% csrf_token %}
 	    {{ add_member_form.as_p }}
@@ -63,7 +71,7 @@
 	</form>
        
     
-        <h3>Remove Member from Group</h3>
+        <h3>Remove Member from {{ group.name }}</h3>
 	<form id="remove_member_form" method="post" action="/SecureWitness/group/{{ group.name }}/" enctype="multipart/form-data">
 	    {% csrf_token %}
 	    {{ remove_member_form.as_p }}
