added chases stuff so I can push to heroku

--- a/SecureWitness/templates/SecureWitness/group.html
+++ b/SecureWitness/templates/SecureWitness/group.html
@@ -94,6 +94,7 @@
 					<h5> Posted: {{comment.timestamp}} </h5>
 				{% else %}
 					<h5> From <a href = "/SecureWitness/userportal/{{username}}">{{comment.authorName}}:</a></h5>
+					<h5> Posted: {{comment.timestamp}} </h5>
 				{% endif %}
 				{{comment.comment}}
 				</br>
